# personal-bot

./: .env  .env.example  .gitignore  README.md  pyproject.toml
cli/: hf_model_download.py
data/: retrieval_synthetic_eval_dataset.json
notebooks/: 001-prepare-dataset-clinic.ipynb  002-analysis-sample-data.ipynb  003-collate-metadata-into-data.ipynb  004-late-chunking.ipynb  005-retrieval.ipynb  006-create-retrieval-healhcare-dataset.ipynb  007-evaluate-embedding-model.ipynb  008-finetune-embedding.ipynb  009-chat-ui.ipynb  010-extract-data.ipynb  011-hard-negative-mining.ipynb
notebooks/data/025_modify_prompt_with_tree_summarize/: retrieval_synthetic_eval_dataset.json
src/features/append_reference/: custom_query_engine.py
src/features/crawl/: script.py
src/features/synthesize_recommendation/: custom_tree_summarize.py
src/features/translation/: script.py
src/run/: args.py  cfg.py  orchestrator.py  utils.py
src/run/eval/: __init__.py  manual_eval_dataset.py  response.py  retrieval.py
src/run/vector_db/: base.py  qdrant.py
ui/: callback_handler.py  chat_app.py
